--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="tencorrectmobile">Please Enter Correct Mobile Number</string>
     <string name="plzotp">Please Enter Otp.</string>
     <string name="create_account"><u>Create Account</u></string>
-    <string name="the_official_app"><u>Department of Higher Education Cricket, Haryana\n\nthe official App</u></string>
+    <string name="the_official_app"><u>Department of Higher Education Cricket, Haryana\nthe official App</u></string>
     <string name="make_sure_reloading_page">Make sure you have good internet in your Mobile.Reload page again.</string>
     <string name="oops_there_is_no_interenet">Oops!! There is no internet connection. Please enable your internet connection.</string>
     <string name="select_ur_image">Select your image</string>
